--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.6.4"
+    "sequelize": "^6.6.4",
+    "uuid-random": "^1.3.2"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
